force-app/main/default/objects/Fluent_Conversation__c/Fluent_Conversation__c.object-meta.xml
<CustomObject>
    <label>Fluent Conversation</label>
    <nameField>
        <displayFormat>CONV-{0000000}</displayFormat>
        <label>Conversation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fluent Conversations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>