force-app/main/default/objects/Fluent_Conversation__c/fields/AI_Response__c.field-meta.xml
<CustomField>
    <fullName>AI_Response__c</fullName>
    <label>AI Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>