force-app/main/default/objects/Fluent_Conversation__c/fields/Hour_of_Day__c.field-meta.xml
<CustomField>
    <fullName>Hour_of_Day__c</fullName>
    <description>The hour of the day (0-23) when the conversation occurred</description>
    <formula>HOUR(TIMEVALUE(Interaction_Timestamp__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The hour of the day (0-23) when the conversation occurred</inlineHelpText>
    <label>Hour of Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>