force-app/main/default/objects/Fluent_Conversation__c/fields/Intent_Level__c.field-meta.xml
<CustomField>
    <fullName>Intent_Level__c</fullName>
    <description>User&apos;s purchase intent level based on engagement analysis</description>
    <inlineHelpText>Categorizes user intent: Hot (80-100), Warm (60-79), Cold (40-59), Low (0-39)</inlineHelpText>
    <label>Intent Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>