force-app/main/default/objects/Fluent_Conversation__c/fields/Interaction_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Timestamp__c</fullName>
    <label>Interaction Timestamp</label>
    <type>DateTime</type>
</CustomField>