force-app/main/default/objects/Fluent_Conversation__c/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <description>Calculated lead score based on user engagement and intent signals (0-100)</description>
    <inlineHelpText>Lead score calculated from engagement patterns, question types, and interaction frequency. Higher scores indicate stronger purchase intent.</inlineHelpText>
    <label>Lead Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>