force-app/main/default/objects/Fluent_Conversation__c/fields/Response_Time_Ms__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_Ms__c</fullName>
    <label>Response Time (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>