force-app/main/default/objects/Fluent_Conversation__c/fields/Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Session_ID__c</fullName>
    <externalId>true</externalId>
    <label>Session ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>