force-app/main/default/objects/Fluent_Conversation__c/fields/User_Question__c.field-meta.xml
<CustomField>
    <fullName>User_Question__c</fullName>
    <label>User Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>