force-app/main/default/objects/Fluent_Conversation__c/fields/Video__c.field-meta.xml
<CustomField>
    <fullName>Video__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Video</label>
    <referenceTo>Ad_Video__c</referenceTo>
    <relationshipLabel>Fluent Conversations</relationshipLabel>
    <relationshipName>Fluent_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>