force-app/main/default/objects/Fluent_Conversation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Interaction_Type__c</columns>
    <columns>Video__c</columns>
    <columns>User_Email__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>